src/objects/Prosth_Exam_Form__c.object
<CustomObject>
    <fields>
        <fullName>Temperature__c</fullName>
        <label>Temperature</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tissue_Color__c</fullName>
        <label>Tissue Color</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pink</fullName>
                </value>
                <value>
                    <fullName>Red</fullName>
                </value>
                <value>
                    <fullName>Blue</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tissue_Consistency__c</fullName>
        <label>Tissue Consistency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Soft</fullName>
                </value>
                <value>
                    <fullName>Firm</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tissue_Mand__c</fullName>
        <label>Tissue Mand</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Thick/Flat</fullName>
                </value>
                <value>
                    <fullName>Think/Scalloped</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tissue_Max__c</fullName>
        <label>Tissue Max</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Thick/Flat</fullName>
                </value>
                <value>
                    <fullName>Thin/Scalloped</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tissue_Notes__c</fullName>
        <label>Tissue Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Tissue_Texture__c</fullName>
        <label>Tissue Texture</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Smooth</fullName>
                </value>
                <value>
                    <fullName>Stippled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tooth_Mould__c</fullName>
        <label>Tooth Mould</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tooth_Shade_Other__c</fullName>
        <label>Tooth Shade Other</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tooth_Shade__c</fullName>
        <label>Tooth Shade</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A1</fullName>
                </value>
                <value>
                    <fullName>A2</fullName>
                </value>
                <value>
                    <fullName>A3</fullName>
                </value>
                <value>
                    <fullName>A3.5</fullName>
                </value>
                <value>
                    <fullName>A4</fullName>
                </value>
                <value>
                    <fullName>B1</fullName>
                </value>
                <value>
                    <fullName>B2</fullName>
                </value>
                <value>
                    <fullName>B3</fullName>
                </value>
                <value>
                    <fullName>B4</fullName>
                </value>
                <value>
                    <fullName>BL2</fullName>
                </value>
                <value>
                    <fullName>BL3</fullName>
                </value>
                <value>
                    <fullName>C1</fullName>
                </value>
                <value>
                    <fullName>C2</fullName>
                </value>
                <value>
                    <fullName>C3</fullName>
                </value>
                <value>
                    <fullName>C4</fullName>
                </value>
                <value>
                    <fullName>D2</fullName>
                </value>
                <value>
                    <fullName>D3</fullName>
                </value>
                <value>
                    <fullName>D4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tooth_Surface_Notes__c</fullName>
        <label>Tooth Surface Notes</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Weight__c</fullName>
        <label>Weight</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>iCAT__c</fullName>
        <defaultValue>false</defaultValue>
        <label>iCAT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isactive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>isactive</label>
        <type>Checkbox</type>
    </fields>
    <label>Prosth Exam Form</label>
    <nameField>
        <displayFormat>PEFN-{0000}</displayFormat>
        <label>Prosth Exam Form Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Prosth Exam Forms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>